coverted html files for django

--- a/PMS/UI/css/homepageadmin.css
+++ b/PMS/UI/css/homepageadmin.css
@@ -19,6 +19,10 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+.student-name{
+  color:#FFF !important;
+}
+
  #wrapper {
     width: 100%;
     background:#413F3E;
