--- a/PMS/UI/css/homepage.css
+++ b/PMS/UI/css/homepage.css
@@ -10,6 +10,10 @@ html,body {
     font-family: 'Lato', sans-serif;
 }
 
+.student-name{
+  color:#FFF !important;
+}
+
 @media (min-width:768px) {
     h1 {
         font-size:68px;
@@ -227,4 +231,131 @@ footer .nav>li>a:hover {
 .up-btn{
     height:30px;
     width: 30px;
+}
+
+.dropdown-menu>li>a {
+    display: block;
+    padding: 15px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
+
+.dropdown-menu>li>a:hover {
+    background-color: #742928 !important
+
+}
+
+.navbar-nav > li > .dropdown-menu {
+    margin-top: -1px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+
+p, span, a, ul, li, button {
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+}
+
+strong {
+  font-weight: 600;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Open Sans", "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+  line-height: 1.5em;
+  font-weight: 300;
+}
+
+strong {
+  font-weight: 400;
+}
+
+.tile {
+  width: 100%;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+.tile .title {
+  margin-top: 0px;
+}
+.tile.purple, .tile.blue, .tile.red, .tile.orange, .tile.green {
+  color: #742928;
+}
+.tile.red {
+  background: #FFF;
+}
+.tile.red:hover {
+  background: #C0392B;
+  color:#FFF;
+}
+.table{
+  background-color: #FFF !important;
+}
+
+.button.primary {
+    background: #742928;
+    color: #ffffff;
+    border-color: #742928;
+}
+.button {
+    padding: 0 1rem;
+    height: 3.125rem;
+    width: 5.125rem;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #ffffff;
+    border: 1px #d9d9d9 solid;
+    color: #262626;
+    cursor: pointer;
+    display: inline-block;
+    outline: none;
+    font-size: 1.4rem;
+    line-height: 1;
+    margin: .15625rem 0;
+    position: relative;
+}
+
+.pagination > li > a, .pagination > li > span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #742928;
+    text-decoration: none;
+    background-color: #FFF;
+    border: 1px solid #ddd;
+}
+.panel-info > .panel-heading {
+    color: #FFF !important;
+    background-color: #C0392B !important;
+    border-color: #C0392B !important;
+}
+.panel-heading {
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+.current, .liabilities {
+  margin-bottom: 2px;
+  padding: 5px;
+  color:#FFF;
+  background-color:  #C0392B;
+}
+
+.panel-footer .btn-danger{
+  background-color:  #C0392B !important;
 }
