--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -3,33 +3,38 @@
 {% load staticfiles %}
 
 {% block css %}
-    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/widget.css' %}">
+    <script src="{% static 'js/modernizr.js' %}"></script>
     <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
-    <script src="{% static 'js/modernizr.js' %}"></script>
 {% endblock css %}
-    
-{% block title %}
-    <title>Add Students</title>
-{% endblock title %}
-   
-{% block body %}
 
+    {% block title %}<title>Add Student</title>{% endblock title %}
+
+{% block body %}
+<div class="container">
+  <div class="row">
+    <h2 class="student-name text-center">ADD A STUDENT</h2>
+  </div>
+   
 <div class="image-container set-full-height">
+       
     <!--   Big container   -->
     <div class="container">
         <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-            <!--      Wizard container        -->
-            <div class="wizard-container">
+           
+            <!--      Wizard container        -->   
+            <div class="wizard-container"> 
+                
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
                     <form action="" method="POST">
-                <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                         {% csrf_token %}
+                <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
+                
                         <div class="wizard-header">
                             <h3>
                                 <br>
@@ -45,7 +50,7 @@
                             <li><a href="#scholarship" data-toggle="tab">Scholarship</a></li>
                             <li><a href="#membership" data-toggle="tab">Membership</a></li>
                         </ul>
-
+                        
                         <div class="tab-content">
                             <div class="tab-pane" id="about">
                               <div class="row">
@@ -84,7 +89,7 @@
                                   <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Year</label><br>
-                                            {{ form.year }}
+                                             {{ form.year }}
                                           </div>
                                     </div>
                                     <div class="col-sm-10 col-sm-offset-1">
@@ -104,7 +109,7 @@
                             <div class="tab-pane" id="guardian">
                                 <h4 class="info-text"> Type in guardian's name. </h4>
                                 <div class="row">
-
+                                   
                                     <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
@@ -127,15 +132,17 @@
                                           {{ form.gcontact }}
                                       </div>
                                   </div>
-
+                                    
                                 </div>
                             </div>
                         <div class="tab-pane" id="siblings">
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
-                                        <h4 class="info-text"> If you have a sibling enrolled in the school. </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.sibling }}</label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no" value="No"></label></CENTER>
+                                        <h4 class="info-text"> If you have a sibling enrolled in the school, type in the oldest sibling. </h4>
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.sibling }} </label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="No"></CENTER>
+                                      
+
                                         <div class="col-sm-10 col-sm-offset-1" id = "sinfo" style="display:none;">
                                         </div>
                                     </div>
@@ -146,8 +153,8 @@
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Do you have a scholarship? </h4>
                                        <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-sch" value="Yes"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch" value="No"></label></CENTER>
-
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch"></label value="No"></CENTER>
+                                      
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "schinfo" style="display:none;">
                                       <div class="form-group">
@@ -163,7 +170,9 @@
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Are you a member in any organization? </h4>
                                        <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.band_member}}</label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem" value="No"></label></CENTER>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem"></label value="No"></CENTER>
+                                      
+
                                         <div class="col-sm-10 col-sm-offset-1" id = "meminfo" style="display:none;">
                                   </div>
                                     </div>
@@ -174,37 +183,41 @@
                             <div class="pull-right">
                                 <input type='button' class='btn btn-next btn-fill btn-danger btn-wd btn-sm' name='next' value='Next' />
                                 <input type='submit' class='btn btn-finish btn-fill btn-danger btn-wd btn-sm' name='finish' value='Finish' />
-
+        
                             </div>
-
+                            
                             <div class="pull-left">
                                 <input type='button' class='btn btn-previous btn-fill btn-default btn-wd btn-sm' name='previous' value='Previous' />
                             </div>
                             <div class="clearfix"></div>
-                        </div>
+                        </div>  
                     </form>
                 </div>
             </div> <!-- wizard container -->
         </div>
         </div><!-- end row -->
     </div> <!--  big container -->
-
+    
 </div>
-{% endblock body%}
+</div>
+{% endblock body %}
 
 {% block js %}
-    <!-- jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- jQuery easing plugin -->
-    <script src="{% static 'js/jquery.easing.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
+<!-- jQuery easing plugin -->
     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
     <!--   plugins   -->
     <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
     <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+    <script src="{% static 'js/passwordGenerator.js' %}"></script>
     <!--  methods for manipulating the wizard and the validation -->
     <script src="{% static 'js/wizard.js' %}"></script>
-    <script src="{% static 'js/passwordGenerator.js' %}"></script>
-{% endblock js%}
+    <script type="text/javascript">
+            $(document).ready(function() {
+            $(".dropdown-toggle").dropdown();
+        });
+    </script>
+{% endblock js %}
