--- a/PMS/accounts/templates/accounts/editstudent.html
+++ b/PMS/accounts/templates/accounts/editstudent.html
@@ -1,21 +1,26 @@
+{% extends 'accounts/base.html' %}
+
 {% load staticfiles %}
 
-{% block css%}
-    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+{% block css %}
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/widget.css' %}">
+    <script src="{% static 'js/modernizr.js' %}"></script>
+    <link href="{% static 'css/gsdk-base.css' %]" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
-    <script src="{% static 'css/style.css' %}"></script>
-{% endblock css%}
-    
-{% block title %}
-    <title>Edit Students</title>
-{% endblock title%}
+{% endblock css %}
+
+    {% block title %}<title>Edit Student</title>{% endblock title %}
+
+{% block body %}
+
+<div class="container">
+  <div class="row">
+    <h2 class="student-name text-center">EDIT A STUDENT</h2>
+  </div>
    
-{% block body%}
 <div class="image-container set-full-height">
        
     <!--   Big container   -->
@@ -27,12 +32,13 @@
             <div class="wizard-container"> 
                 
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="">
+                    <form action="" method="post">
+                        {% csrf_token %}
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
                 
                         <div class="wizard-header">
                             <h3>
-                              <br><br>
+                                <br>
                                <b>STUDENT</b> PROFILE <br>
                                <small>This information will be kept confidential.</small>
                                <br><br>
@@ -62,75 +68,41 @@
                                   <div class="col-sm-6">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        <input name="firstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Middle Name <small>(required)</small></label>
-                                        <input name="midname" type="text" class="form-control" placeholder="Parker...">
+                                        {{ form.firstname }}
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        <input name="lastname" type="text" class="form-control" placeholder="Smith...">
+                                        {{ form.lastname }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Username <small>(required)</small></label>
-                                          <input name="username" type="text" class="form-control" placeholder="20XX12345" rel="gp" data-size="5" data-character-set="0-9,u">
+                                          {{ form.username }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Password <small>(required)</small></label>
-                                          <input name="password" type="text" class="form-control" placeholder="********" rel="gp" data-size="8" data-character-set="a-z,A-Z,0-9">
+                                          {{ form.password }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Year</label><br>
-                                             <select name="country" class="form-control">
-                                                <option value="7"> 7 </option>
-                                                <option value="8"> 8 </option>
-                                                <option value="9"> 9 </option>
-                                                <option value="10"> 10 </option>
-                                                <option value="11"> 11 </option>
-                                                <option value="12"> 12 </option>
-                                            </select>
+                                             {{ form.year }}
                                           </div>
                                     </div>
                                     <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Section</label><br>
-                                             <select name="country" class="form-control">
-                                                <option value="A"> A </option>
-                                                <option value="B"> B </option>
-                                                <option value="C"> C </option>
-                                                <option value="D"> D </option>
-                                                <option value="E"> E </option>
-                                                <option value="F"> F </option>
-                                                <option value="G"> G </option>
-                                                <option value="H"> H </option>
-                                                <option value="I"> I </option>
-                                                <option value="10"> J </option>
-                                                <option value="K"> K </option>
-                                                <option value="L"> L </option>
-                                                <option value="M"> M </option>
-                                                <option value="N"> N </option>
-                                                <option value="SA"> Special A </option>
-                                                <option value="SB"> Special B </option>
-                                            </select>
+                                            {{ form.section }}
                                           </div>
                                     </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                          <label>Email <small>(required)</small></label>
-                                          <input name="email" type="email" class="form-control" placeholder="andrew@creative-tim.com">
-                                      </div>
-                                  </div>
-                                  <div class="col-sm-10 col-sm-offset-1">
-                                      <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          <input name="address" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
+                                          {{ form.address }}
                                       </div>
                                   </div>
                               </div>
@@ -138,58 +110,42 @@
                             <div class="tab-pane" id="guardian">
                                 <h4 class="info-text"> Type in guardian's name. </h4>
                                 <div class="row">
-                                   
+
                                     <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Middle Name <small>(required)</small></label>
-                                        <input name="gmidname" type="text" class="form-control" placeholder="Parker...">
+                                        {{ form.gfirstname }}
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        <input name="glastname" type="text" class="form-control" placeholder="Smith...">
+                                        {{ form.glastname }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          <input name="gaddress" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
+                                          {{ form.gaddress }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Contact number <small>(required)</small></label>
-                                          <input name="gcontact" type="text" class="form-control" placeholder="441-5656">
+                                          {{ form.gcontact }}
                                       </div>
                                   </div>
-                                    
+
                                 </div>
                             </div>
                         <div class="tab-pane" id="siblings">
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> If you have a sibling enrolled in the school, type in the oldest sibling. </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes" value="Code"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="Design"></CENTER> 
-                                      
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.sibling }} </label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="No"></CENTER>
+
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "sinfo" style="display:none;">
-                                      <div class="form-group">
-                                        <label>First Name <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Middle Name <small>(required)</small></label>
-                                        <input name="gmidname" type="text" class="form-control" placeholder="Parker...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Last Name <small>(required)</small></label>
-                                        <input name="glastname" type="text" class="form-control" placeholder="Smith...">
-                                      </div>
-                                  </div>
+                                        </div>
                                     </div>
                             </div>
                         </div>
@@ -197,18 +153,14 @@
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Do you have a scholarship? </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-sch" value="Code"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch"></label value="Design"></CENTER> 
-                                      
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-sch" value="Yes"></label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch"></label value="No"></CENTER>
+
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "schinfo" style="display:none;">
                                       <div class="form-group">
-                                        <label>Name <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                          <label>Contact number <small>(required)</small></label>
-                                          <input name="gcontact" type="text" class="form-control" placeholder="441-5656">
+                                        <label>Scholarship</label>
+                                        {{ form.scholarship }}
                                       </div>
                                   </div>
                                     </div>
@@ -218,15 +170,11 @@
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Are you a member in any organization? </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-mem" value="Code"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem"></label value="Design"></CENTER> 
-                                      
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.band_member}}</label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem"></label value="No"></CENTER>
+
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "meminfo" style="display:none;">
-                                      <div class="form-group">
-                                        <label>Name of Organization <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Drum and Buggle">
-                                      </div>
                                   </div>
                                     </div>
                             </div>
@@ -250,22 +198,32 @@
         </div>
         </div><!-- end row -->
     </div> <!--  big container -->
+    
 </div>
-{% endblock body%}
+</div>
+{% endblock body %}
 
-{% block js%}
-    <!-- jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- jQuery easing plugin -->
-    <script src="{% static 'js/jquery.easing.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
+{% block js %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
+
+<!-- jQuery easing plugin --> 
+
     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+        
     <!--   plugins   -->
     <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
+    
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
     <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+    
     <!--  methods for manipulating the wizard and the validation -->
     <script src="{% static 'js/wizard.js' %}"></script>
-    <script src="{% static 'js/passwordGenerator.js' %}"></script>
-{% endblock js%}
+    <script type="text/javascript">
+            $(document).ready(function() {
+            $(".dropdown-toggle").dropdown();
+        });
+    </script>
+{% endblock js %}
+
