--- a/PMS/accounts/templates/accounts/viewstudent.html
+++ b/PMS/accounts/templates/accounts/viewstudent.html
@@ -1,41 +1,101 @@
-{% extends 'accounts/base.html' %}
-
-{% load staticfiles %}
-
-{% block css %}
-    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+<!doctype html>
+<html lang="en" class="no-js">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
-    <link rel="stylesheet" href="{% static 'css/viewstudent.css' %}"> <!-- Resource style -->
-    <script src="{% static 'js/modernizr.js' %}"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/metro-bootstrap.css' %}">
-{% endblock css %}
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     
-{% block title %}
+    
+    <script src="js/modernizr.js"></script> <!-- Modernizr -->
+    
     <title>View Student</title>
-{% endblock title %}
-   
-{% block body %}
-<div class="container">
+</head>
+<body>
+    <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand text-danger" href="homepageadmin.html">LNNCHS</a>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-collapsible">
+            <ul class="nav navbar-nav navbar-left">
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Student <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="addstudents.html">Add Student</a></li>
+                    <li><a href="viewallstudents.html">View / Edit Student</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="addfunds.html">Add Fund</a></li>
+                    <li><a href="viewallfunds.html">View / Edit Fund</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Project <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="addproject.html">Add Project</a></li>
+                    <li><a href="viewallproject.html">View / Edit Project</a></li>
+                  </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="homepage.html">Logout</a></li>
+                  </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+  </nav>
+<br>
+<br>
+<br>
+<br>
+    <div class="row">
+    <h2 class="student-name text-center">VIEW STUDENT</h2>
+  </div>
+    <main class="cd-main-content">
+    </main> <!-- .cd-main-content -->
+
+    <div class="container">
       <div class="row">
       
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
-          <br><br><br><br><br>
+        <div class="col-xs-12" >
+          
    
-          <div class="panel panel-info">
+         <div class="panel panel-info">
             <div class="panel-heading">
               <h3 class="panel-title"> First name, Middle name, Family name</h3>
             </div>
             <div class="panel-body">
               <div class="row">
-                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="{% static 'img/default-avatar.png' %}" class="img-circle img-responsive"> </div>
-
+                <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="img/default-avatar.png" class="img-circle img-responsive"> </div>
+                
+                <!--<div class="col-xs-10 col-sm-10 hidden-md hidden-lg"> <br>
+                  <dl>
+                    <dt>DEPARTMENT:</dt>
+                    <dd>Administrator</dd>
+                    <dt>HIRE DATE</dt>
+                    <dd>11/12/2013</dd>
+                    <dt>DATE OF BIRTH</dt>
+                       <dd>11/12/2013</dd>
+                    <dt>GENDER</dt>
+                    <dd>Male</dd>
+                  </dl>
+                </div>-->
                 <div class=" col-md-9 col-lg-9 "> 
                   <table class="table table-user-information">
+                    <br>
+                    <br>
                     <tbody>
                       <tr>
                         <td>Username:</td>
@@ -96,6 +156,8 @@
                           Foundation
                         </td>
                       </tr>
+                     
+                     
                     </tbody>
                   </table>
                   
@@ -105,32 +167,33 @@
               </div>
             </div>
                  <div class="panel-footer">
-                        <a data-original-title="Broadcast Message" data-toggle="tooltip" type="button" class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-envelope"></i></a>
-                        <span class="pull-right">
-                            <a href="editstudent.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-warning"><i class="glyphicon glyphicon-edit"></i></a>
-                            <a data-original-title="Edit user payment" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-edit"></i></a>
-                        </span>
-                    </div>
+                        
+                        <a href="editstudent.html" data-original-title="Edit this user" data-toggle="tooltip" type="button" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-edit"></i></a>
+                    
             
           </div>
         </div>
       </div>
     </div>
-{% endblock body %}
 
-{% block js %}
-    <!-- jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- jQuery easing plugin -->
-    <script src="{% static 'js/jquery.easing.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-    <!--   plugins   -->
-    <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
-    <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
-    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
-    <!--  methods for manipulating the wizard and the validation -->
-    <script src="{% static 'js/wizard.js' %}"></script>
-    <script src="{% static 'js/passwordGenerator.js' %}"></script>
-{% endblock js %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/homepage.js"></script>
+<script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+</div>
+<script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+</div>
+<script src="js/jquery-2.1.4.js"></script>
+<script src="js/jquery.menu-aim.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="js/viewallstudents.js"></script> <!-- Resource jQuery -->
+<script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script type="text/javascript">
+            $(document).ready(function() {
+            $(".dropdown-toggle").dropdown();
+        });
+    </script>
+</body>
+</html>
+
+
