--- a/PMS/funds/templates/funds/addfunds.html
+++ b/PMS/funds/templates/funds/addfunds.html
@@ -1,33 +1,40 @@
-{% extends 'accounts/base.html' %}
+{% extends 'accounts:base.html' %}
 
 {% load staticfiles %}
 
 {% block css %}
-    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/widget.css' %}">
+    <script src="{% static 'js/modernizr.js' %}"></script>
     <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
-    <script src="{% static 'js/modernizr.js' %}"></script>
 {% endblock css %}
-    
-{% block title %}
-    <title>Add Funds</title>
-{% endblock title %}
+
+    {% block title %}<title>Add Funds</title>{% endblock title %}
 
 {% block body %}
-<div class="image-container set-full-height">
+
+<div class="container">
+  <div class="row">
+    <h2 class="student-name text-center">ADD A FUND</h2>
+  </div>
+    
+  <div class="image-container set-full-height">
+       
     <!--   Big container   -->
     <div class="container">
         <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
+           
             <!--      Wizard container        -->   
-            <div class="wizard-container">
+            <div class="wizard-container"> 
+                
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="" method="">
+                    <form action="" method="POST">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
+                
                         <div class="wizard-header">
                             <h3>
                                 <br>
@@ -80,22 +87,31 @@
         </div>
         </div><!-- end row -->
     </div> <!--  big container -->
+    
+</div>
 </div>
 {% endblock body %}
 
 {% block js %}
-    <!-- jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- jQuery easing plugin -->
-    <script src="{% static 'js/jquery.easing.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
+
+<!-- jQuery easing plugin --> 
+
     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+        
     <!--   plugins   -->
     <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
+    
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
     <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+    
     <!--  methods for manipulating the wizard and the validation -->
     <script src="{% static 'js/wizard.js' %}"></script>
-    <script src="{% static 'js/passwordGenerator.js' %}"></script>
+    <script type="text/javascript">
+            $(document).ready(function() {
+            $(".dropdown-toggle").dropdown();
+        });
+    </script>
 {% endblock js %}
