--- a/PMS/funds/templates/funds/editfund.html
+++ b/PMS/funds/templates/funds/editfund.html
@@ -3,27 +3,26 @@
 {% load staticfiles %}
 
 {% block css %}
-    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta charset="utf-8" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/widget.css' %}">
+    <script src="{% static 'js/modernizr.js' %}"></script>
     <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
-    <script src="{% static 'js/modernizr.js' %}"></script>
-{% endblock css%}
-    
-{% block title %}
-    <title>Edit Funds</title>
-{% endblock title %}
+{% endblock css %}
+
+    {% block title %}<title>Edit Fund</title>{% endblock title %}
 
 {% block body %}
-<div class="image-container set-full-height">
+
+<div class="container">
+  <div class="row">
+    <h2 class="student-name text-center">ADD A FUND</h2>
+  </div>
+    
+  <div class="image-container set-full-height">
+       
     <!--   Big container   -->
     <div class="container">
         <div class="row">
@@ -38,7 +37,7 @@
                 
                         <div class="wizard-header">
                             <h3>
-                                <br><br>
+                                <br>
                                <b>FUND</b> PROFILE <br>
                                <small>This information will be kept confidential.</small>
                                <br><br>
@@ -66,8 +65,8 @@
                           </div>
                             </div>
                             <div class="tab-pane" id="submission">
-                                <h4 class="info-text"> Type in guardian's name. </h4>
-                                Are you sure in submitting this content?
+                                <h4 class="info-text"> Are you sure in submitting this content? </h4>
+                                <h4 class="info-text"> If yes, click Finish. </h4>
                             </div>
                       </div>
                         <div class="wizard-footer">
@@ -88,22 +87,31 @@
         </div>
         </div><!-- end row -->
     </div> <!--  big container -->
+    
+</div>
 </div>
 {% endblock body %}
 
 {% block js %}
-    <!-- jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- jQuery easing plugin -->
-    <script src="{% static 'js/jquery.easing.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
+
+<!-- jQuery easing plugin --> 
+
     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+        
     <!--   plugins   -->
     <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
+    
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
     <script src="{% static 'js/jquery.validate.min.js' %}"></script>
+    
     <!--  methods for manipulating the wizard and the validation -->
     <script src="{% static 'js/wizard.js' %}"></script>
-    <script src="{% static 'js/passwordGenerator.js' %}"></script>
+    <script type="text/javascript">
+            $(document).ready(function() {
+            $(".dropdown-toggle").dropdown();
+        });
+    </script>
 {% endblock js %}
