change school year

--- a/PMS/accounts/templates/accounts/homepage-admin.html
+++ b/PMS/accounts/templates/accounts/homepage-admin.html
@@ -55,6 +55,8 @@
                             <li><a href="{% url 'funds:addproject' %}">Add a new Project</a></li>
                             <li><a href="{% url 'funds:searchproject' %}">Search Project</a></li>
                             <li><a href="{% url 'funds:viewallprojects' %}">View All Projects</a></li>
+
+                            <li><a href="{% url 'accounts:changeschoolyear' %}">Change School Year</a></li>
                             
                             <li><a href="#">One more separated link</a></li>
                         </ul>
