change school year update

--- a/PMS/accounts/templates/accounts/receiptinfo.html
+++ b/PMS/accounts/templates/accounts/receiptinfo.html
@@ -11,7 +11,7 @@
 <title> LNNCHS Payment Monitoring System Admin</title>
 </head>
 <body>
-	<p>Changes Save {{ request.student_id }}</p>
+	<p>Changes Save {{ object.student_id }} || {{ amount }}</p>
 	<a href="/accounts/home">Back</a>
 </body>
 </html>
